<resources>
    <string name="app_name">PT Surya Safety Nusantara</string>
    <string name="label_daftar_pelatihan">Daftar Pelatihan</string>
    <string name="label_pelatihan_diikuti">Pelatihan Diikuti</string>
    <string name="label_lowongan_pekerjaan">Lowongan Pekerjaan</string>
    <string name="label_profil_perusahaan">Profil Perusahaan</string>
    <string name="label_pengaturan_akun">Pengaturan Akun</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_log_in">Log in</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_verifikasi_password">Verifikasi password</string>
    <string name="label_nama_lengkap">Nama lengkap</string>
    <string name="label_email">Email</string>
    <string name="label_alamat">Alamat</string>
    <string name="label_no_handphone">No Handphone</string>
    <string name="label_edit_akun">Edit Akun</string>
    <string name="label_save">Save</string>
    <string name="label_tentang_kami">Tentang Kami</string>
    <string name="label_visi_misi_perusahaan">Visi Misi Perusahaan</string>
    <string name="label_moto_perusahaan">Moto Perusahaan</string>
    <string name="label_jasa_pelatihan">Jasa Pelatihan</string>
    <string name="label_kontak_kami">Kontak Kami</string>
    <string name="label_logout">Logout</string>
    <string name="label_nama_lowongan">Nama Lowongan</string>
    <string name="label_nama_perusahaan">Nama Perusahaan</string>
    <string name="label_detail_lowongan">Detail Lowongan</string>
    <string name="label_persyaratan_lowongan">Persyaratan Lowongan</string>
    <string name="label_deadline_lowongan">Deadline Lowongan</string>
    <string name="label_nama_pelatihan">Nama Pelatihan</string>
    <string name="label_detail_pelatihan">Detail Pelatihan</string>
    <string name="label_jadwal_pelatihan">Jadwal Pelatihan</string>
    <string name="label_harga_pelatihan">Harga Pelatihan</string>
    <string name="label_status">Status</string>
    <string name="label_grup_whatsapp">Grup Whatsapp</string>
    <string name="label_join_grup">Join Grup</string>
    <string name="label_nama_trainer">Nama Trainer</string>
    <string name="label_cv">CV</string>
    <string name="label_materi_pelatihan">Materi Pelatihan</string>
    <string name="label_pengumpulan_tugas">Pengumpulan Tugas</string>
    <string name="label_upload_tugas">Upload Tugas</string>
    <string name="label_syarat_sertifikasi">Syarat Sertifikasi</string>
    <string name="label_upload_persyaratan_sertifikasi">Upload Persyaratan Sertifikasi</string>
    <string name="label_sertifikasi_pelatihan">Sertifikasi Pelatihan</string>
    <string name="label_sertifikasi_kompetensi">Sertifikasi Kompetensi</string>
    <string name="formatter_deadline">Deadline : %s</string>
    <string name="formatter_dash_divider">%1s - %2s</string>
    <string name="formatter_rupiah">Rp. %d</string>
    <string name="label_sudah_pernah_daftar_pelatihan">Sudah Pernah daftar pelatihan</string>
    <string name="label_belum_pernah_daftar_pelatihan">Belum pernah daftar pelatihan</string>
    <string name="label_upload_bukti_pembayaran">Upload Bukti Pembayaran</string>
    <string name="label_detail_pelatihan_diikuti">Detail Pelatihan Diikuti</string>
    <string name="label_form_daftar_pelatihan">Form Daftar Pelatihan</string>
    <string name="label_pilih_cv">Pilih CV</string>
    <string name="label_pilih_ktp">Pilih KTP</string>
    <string name="label_pilih_ijazah">Pilih Ijazah</string>
    <string name="label_pilih_surat_pengalaman_kerja">Pilih Surat Pengalaman Kerja</string>
    <string name="label_pilih_portofolio">Pilih Portofolio</string>
    <string name="label_pilih_file_penunjang_optional">Pilih file penunjang (optional)</string>
    <string name="label_upload_persyaratan">Upload Persyaratan</string>
    <string name="label_tentang_kami_content">PT Surya Safety Nusantara adalah perusahaan yang bergerak di bidang layanan penyedia jasa konsultasi dan pelatihan yang berdedikasi untuk mendukung organisasi di semua sektor bisnis, industri, dan pemerintahan\nKami menyediakan Jasa Keselamatan dan Kesehatan Kerja (K3) yang berada di bawah Kementrian Ketenagakerjaan Republik Indonesia sesuai dengan Permenaker RI No 4 Tahun 1995 tentang Perusahaan Jasa Keselamatan dan Kesehatan Kerja.</string>
    <string name="label_visi_misi_content">Visi   :\nMenjadi perusahaan yang terpercaya dan profesional dalam dunia K3 serta meningkatkan sumber daya manusia untuk kemajuan bersama\nMisi   :\na. Memberikan service excellent dalam pelaksanaan pemeriksaan, pengujian, sertifikasi, training dan konsultasi yang profesional serta mengacu pada peraturan yang berlaku.\nb. Ikut serta dalam peningkatan mutu sumber daya manusia yang unggul.\nc. Menciptakan lingkungan yang berdampak positif untuk kemajuan manusia.</string>
    <string name="label_moto_content">Meningkatkan kualitas layanan kami dari waktu ke waktu dan selalu berusaha untuk memberikan semua yang terbaik untuk klien kami, kepercayaan anda adalah kebanggaan kami</string>
    <string name="label_jasa_pelatihan_content">a. Training of Kemnaker RI\nb. Internal Training\nc. Training Bnsp\nd. Consulting Certification</string>
    <string name="label_kontak_kami_content">Alamat : Makam 03/02, Rembang, Purbalingga, Jawa Tengah\nKontak : +62822–5513–6302\nEmail : suryasafety.nusantara@gmail.com</string>
    <string name="label_waiting">Waiting…</string>
    <style name="label_form_persyaratan_sertifikasi">Form Persyaratan Sertifikasi</style>
</resources>