<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_ssn_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Style.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_tentang_kami"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:contentPadding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text.Style.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tentang_kami_content" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Style.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_visi_misi_perusahaan"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:contentPadding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text.Style.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_visi_misi_content" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Style.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_moto_perusahaan"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:contentPadding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text.Style.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_moto_content" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Style.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_jasa_pelatihan"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:contentPadding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text.Style.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_jasa_pelatihan_content" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Style.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_kontak_kami"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:contentPadding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text.Style.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_kontak_kami_content" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
